--- a/HaxeRepro/.vscode/launch.json
+++ b/HaxeRepro/.vscode/launch.json
@@ -12,10 +12,17 @@
       "name": "JavaScript",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceFolder}/export/run.js",
+      "program": "${workspaceFolder}/export/main.js",
       "preLaunchTask": "JS (debug)",
       "sourceMaps": true,
       "outFiles": ["${workspaceFolder}/export/*.js"]
+    },
+    {
+      "name": "Attach to Nodexus",
+      "type": "node",
+      "request": "attach",
+      "restart": true,
+      "port": 9229
     },
     {
       "name": "JavaScript Client",
