--- a/HaxeRepro/package.json
+++ b/HaxeRepro/package.json
@@ -17,8 +17,17 @@
   "author": "Haxe Community",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.8",
+    "@types/luxon": "^1.25.0",
+    "@types/source-map-support": "^0.5.3",
+    "express": "^4.17.1",
     "fast-live-reload": "^2.10.0",
+    "luxon": "^1.25.0",
     "onchange": "^7.0.2",
+    "source-map-support": "^0.5.19",
     "tasksfile": "^5.1.1"
+  },
+  "devDependencies": {
+    "dts2hx": "^0.13.3"
   }
 }
