chore: cosmetic improvements chore: specified what files to scan in launch.json chore: clarified bat launchers names & added comments in them chore: improved readme.md

--- a/HaxeRepro/.vscode/launch.json
+++ b/HaxeRepro/.vscode/launch.json
@@ -18,14 +18,15 @@
       "outFiles": ["${workspaceFolder}/export/*.js"]
     },
     {
-      "name": "Attach to Nodexus",
+      "name": "Attach to Node (HMCP)",
       "type": "node",
       "request": "attach",
       "restart": true,
-      "port": 9229
+      "port": 9229,
+      "outFiles": ["${workspaceFolder}/export/*.js"]
     },
     {
-      "name": "JavaScript Client",
+      "name": "JavaScript Client (HMCP)",
       "type": "chrome",
       "url": "localhost:8080",
       "request": "launch",
