--- a/HaxeRepro/.vscode/tasks.json
+++ b/HaxeRepro/.vscode/tasks.json
@@ -27,7 +27,7 @@
       "label": "JS Client (debug)",
       "type": "shell",
       "command": "npx",
-      "args": ["haxe", "build.hxml", "-debug", "-D", "source-map-content"],
+      "args": ["haxe", "build-client.hxml", "-debug", "-D", "source-map-content"],
       "problemMatcher": ["$haxe-absolute", "$haxe", "$haxe-error", "$haxe-trace"]
     },
     {
