--- a/HaxeRepro/package.json
+++ b/HaxeRepro/package.json
@@ -17,9 +17,11 @@
   "author": "Haxe Community",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/luxon": "^1.25.0",
     "@types/source-map-support": "^0.5.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "fast-live-reload": "^2.10.0",
     "luxon": "^1.25.0",
